# raytracing-course-hw-public

./: .gitignore  CMakeLists.txt  README.md  build.sh  render-samples.sh  run-test.sh  run.sh
codegen/: generate.py  vectors.py
sample_data/: .gitignore  scene-000.txt  scene-001.txt  scene-002.txt  scene-003.txt  scene-004.txt
src/: bvh.h  config.h  geometry.h  image.h  main.cpp  raytracer.h  scene.h
